--- a/newtab.html
+++ b/newtab.html
@@ -9,56 +9,62 @@
 
 ===========================
  -->
-
-<!DOCTYPE html>
-<html >
-	<head>
-		<meta charset="UTF-8">
-		<title>/usr/zweih</title>
-		<link rel="stylesheet" href="css/style1.css">
-		<link rel="icon" href="assets/icon.png" sizes="16x16 32x32 48x48 64x64" type="image/vnd.microsoft.icon">
-		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inconsolata">
-	</head>
-
-	<body>
-		<div id="container">
-			<div id="image">
-				<img id="bannerpic">		
-			</div>
-
-			<div class="window">
-				<div class="terminal"></div>
-			</div>
-<!-- 
-			<iframe height="400px" width="100%" src="https://repl.it/repls/CleverBossyOffice?lite=true" scrolling="no" frameborder="no" allowtransparency="true" allowfullscreen="true" sandbox="allow-forms allow-pointer-lock allow-popups allow-same-origin allow-scripts allow-modals"></iframe> -->
-	  
-			<div id="links">
-				<div class="box">
-					<h3><span class="magenta">><span class="green">general</span></h3>
-					<a href="https://mail.google.com/">/email</a>
-					<a href="https://tumblr.com/dashboard/">/tungle</a>    
-					<a href="https://www.youtube.com">/youtube</a>
-					<a href="https://www.reddit.com">/redd</a>
-					<a href="https://discord.gg/">/discord</a>
+ 
+ <!DOCTYPE html>
+ <html >
+	 <head>
+		 <meta charset="UTF-8">
+		 <title>/usr/zweih</title>
+		 <link rel="stylesheet" href="./css/style1.css">
+		 <link rel="icon" href="./assets/icon.png" sizes="16x16 32x32 48x48 64x64" type="image/vnd.microsoft.icon">
+		 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
+		 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inconsolata">
+		 <link rel="stylesheet" href="./css/repl.css">
+		 <script src="./js/jquery.min.js"></script>
+		 <script src="./js/jquery.modal.min.js"></script>
+		 <link rel="stylesheet" href="./css/jquery.modal.min.css" />
+		</head>
+		
+		<body>
+			<a href="#edit" rel="modal:open">
+				<i style="position: absolute; top: 8px; left: 16px; font-size: 18px;" class="fas fa-pencil-alt"></i>
+			</a>
+			<div id="container">
+				<div id="image">
+					<img id="bannerpic">		
 				</div>
-				<div class="box">
-					<h3><span class="magenta">><span class="green">university</span></h3>
-					<a href="https://myncc.ncc.edu">/cc</a>    
-					<a href="https://mail.google.com/a/students.ncc.edu/">/cc/email</a>
-					<a href="https://ocw.mit.edu/index.htm">/mit_ocw</a>
-					<a href="http://oyc.yale.edu/">/open_yale</a>
-					<a href="https://www.edx.org/">/edx</a>
+				
+				<div class="window">
+					<div class="terminal"></div>
 				</div>
-				<div class="box">
-					<h3><span class="magenta">><span class="green">entertain</span></h3>
-					<a href="https://bandcamp.com/">/blandcamp</a>
-					<a href="https://netflix.com/">/netfix</a>
-					<a href="https://plex.tv">/plex</a>
-					<a href="https://rabb.it/">/rabb.it</a>
-					<a href="https://twitch.tv/">/twitch</a>    
-				</div>
-				<div class="box">
-					<h3><span class="magenta">><span class="green">cyber</span></h3>
+				
+				<div id="links">
+					<div class="box">
+						<h3><span class="magenta">><span class="green">general</span></h3>
+						<a href="https://mail.google.com/">/email</a>
+						<a href="https://tumblr.com/dashboard/">/tungle</a>    
+						<a href="https://www.youtube.com">/youtube</a>
+						<a href="https://www.reddit.com">/redd</a>
+						<a href="https://discord.gg/">/discord</a>
+					</div>
+					<div class="box">
+						<h3><span class="magenta">><span class="green">university</span></h3>
+						<a href="https://myncc.ncc.edu">/cc</a>    
+						<a href="https://mail.google.com/a/students.ncc.edu/">/cc/email</a>
+						<a href="https://ocw.mit.edu/index.htm">/mit_ocw</a>
+						<a href="http://oyc.yale.edu/">/open_yale</a>
+						<a href="https://www.edx.org/">/edx</a>
+					</div>
+					<div class="box">
+						<h3><span class="magenta">><span class="green">entertain</span></h3>
+						<a href="https://bandcamp.com/">/blandcamp</a>
+						<a href="https://netflix.com/">/netfix</a>
+						<a href="https://plex.tv">/plex</a>
+						<a href="https://rabb.it/">/rabb.it</a>
+						<a href="https://twitch.tv/">/twitch</a>    
+					</div>
+					<div class="box">
+						<h3><span class="magenta">><span class="green">cyber</span></h3>
 						<a href="https://github.com/">/git/hub</a>
 						<a href="https://news.ycombinator.com/">/hackernews</a>
 						<a href="https://slashdot.org/">/.</a>
@@ -68,10 +74,16 @@
 				</div>
 			</div>
 		</div>
+
+		<div id="edit" class="modal">
+			<input class="jscolor" value="ab2567">
+			<a href="#" rel="modal:close">Close</a>
+		</div>
 		
-		<script src="js/theme.js"></script>
-		<script src="js/banner.js"></script>
-		<script src="js/jquery.min.js"></script>
-		<script src="js/terminal.js"></script>
+		<script src="./js/theme.js"></script>
+		<script src="./js/banner.js"></script>
+		<script src="./js/terminal.js"></script>
+		<script src="./js/jscolor.js"></script>
 	</body>
-</html>
+	</html>
+	
