--- a/newtab.html
+++ b/newtab.html
@@ -19,6 +19,7 @@
 		 <link rel="icon" href="./assets/icon.png" sizes="16x16 32x32 48x48 64x64" type="image/vnd.microsoft.icon">
 		 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
 		 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inconsolata">
+		 <link rel="stylesheet" href="./css/repl.css">
 		 <script src="./js/jquery.min.js"></script>
 		 <script src="./js/jquery.modal.min.js"></script>
 		 <link rel="stylesheet" href="./css/jquery.modal.min.css" />
@@ -39,7 +40,7 @@
 				
 				<div id="links">
 					<div class="box">
-						<h3><span class="magenta">><span class="green">general</span></h3>
+						<h3><span class="pre">><span class="category">general</span></h3>
 						<a href="https://mail.google.com/">/email</a>
 						<a href="https://tumblr.com/dashboard/">/tungle</a>    
 						<a href="https://www.youtube.com">/youtube</a>
@@ -47,7 +48,7 @@
 						<a href="https://discord.gg/">/discord</a>
 					</div>
 					<div class="box">
-						<h3><span class="magenta">><span class="green">university</span></h3>
+						<h3><span class="pre">><span class="category">university</span></h3>
 						<a href="https://myncc.ncc.edu">/cc</a>    
 						<a href="https://mail.google.com/a/students.ncc.edu/">/cc/email</a>
 						<a href="https://ocw.mit.edu/index.htm">/mit_ocw</a>
@@ -55,7 +56,7 @@
 						<a href="https://www.edx.org/">/edx</a>
 					</div>
 					<div class="box">
-						<h3><span class="magenta">><span class="green">entertain</span></h3>
+						<h3><span class="pre">><span class="category">entertain</span></h3>
 						<a href="https://bandcamp.com/">/blandcamp</a>
 						<a href="https://netflix.com/">/netfix</a>
 						<a href="https://plex.tv">/plex</a>
@@ -63,7 +64,7 @@
 						<a href="https://twitch.tv/">/twitch</a>    
 					</div>
 					<div class="box">
-						<h3><span class="magenta">><span class="green">cyber</span></h3>
+						<h3><span class="pre">><span class="category">cyber</span></h3>
 						<a href="https://github.com/">/git/hub</a>
 						<a href="https://news.ycombinator.com/">/hackernews</a>
 						<a href="https://slashdot.org/">/.</a>
